test/fail/issue-3585/Record.mo
module  {
  public let x =  { var v = 1 }; // was allowed, though impure, now reject as non-static!
}
